tests/compile_fail/declare_scheduler_binary_path_empty.stderr
error: declare_scheduler!: `binary_path` must contain at least one visible character (empty, whitespace-only, and invisible-only literals are rejected)
 --> tests/compile_fail/declare_scheduler_binary_path_empty.rs:8:19
  |
8 |     binary_path = "",
  |                   ^^
